<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="click"
            type="i.library.base.listener.ClickInformBack" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:background="@drawable/shape_dialog">

        <TextView
            android:id="@+id/iImageSucceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/delete_account"
            android:fontFamily="@font/medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/iTextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:layout_marginHorizontal="24dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/iImageSucceed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/delete_confirm_hint"/>

        <Button
            android:id="@+id/iBtnCancel"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/stroke_white_4"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/medium"
            android:layout_marginBottom="44dp"
            android:onClick="@{click::onClick}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iBtnConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iTextContent"/>

        <Button
            android:id="@+id/iBtnConfirm"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/stroke_theme_4"
            android:text="@string/delete"
            android:textColor="@color/color_theme"
            android:textSize="16sp"
            android:fontFamily="@font/medium"
            android:layout_marginBottom="44dp"
            android:onClick="@{click::onClick}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iBtnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iTextContent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>