<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="click"
            type="i.library.base.listener.ClickInformBack" />
        <variable
            name="model"
            type="user.peiso.com.au.ui.login.create.UiLoginCreateVModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/iTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_passcode"
            android:layout_marginTop="118dp"
            android:textSize="20sp"
            android:fontFamily="@font/medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/iTextPasscode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passcode"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/iTextTitle"
            app:layout_constraintStart_toStartOf="parent"/>

        <i.library.base.view.SmsNumberView
            android:id="@+id/iEditPasscode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/shape_login_edit"
            tools:text="000000"
            android:textColor="@color/white"
            android:inputType="numberPassword"
            android:textSize="16sp"
            android:maxLength="4"
            android:paddingHorizontal="@dimen/default_margin"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:text="@={model.passcode}"
            app:layout_constraintTop_toBottomOf="@id/iTextPasscode"/>

        <Button
            android:id="@+id/iBtnLogin"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:textColor="@color/color_theme"
            android:background="@drawable/shape_btn"
            app:layout_constraintVertical_bias="0.3"
            android:onClick="@{click::onClick}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iEditPasscode" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>