<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="user.peiso.com.au.ui.login.login.UiLoginVModel" />
        <variable
            name="click"
            type="i.library.base.listener.ClickInformBack" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iImageLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@mipmap/icon_login_logo"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/iTextMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:layout_marginTop="60dp"
            android:layout_marginStart="@dimen/default_margin"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iImageLogo"/>

        <i.library.base.view.PhoneEditText
            android:id="@+id/iEditMobile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_login_edit"
            android:textColor="@color/white"
            tools:text="400 000 000"
            android:textSize="16sp"
            android:inputType="number"
            android:paddingHorizontal="@dimen/default_margin"
            android:text="@={model.mobile}"
            app:layout_constraintTop_toBottomOf="@id/iTextMobile"
            tools:ignore="TouchTargetSizeCheck"/>

        <TextView
            android:id="@+id/iTextPasscode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passcode"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/iEditMobile"
            app:layout_constraintStart_toStartOf="parent"/>

        <i.library.base.view.SmsNumberView
            android:id="@+id/iEditPasscode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_login_edit"
            android:textColor="@color/white"
            android:inputType="numberPassword"
            android:textSize="16sp"
            android:paddingHorizontal="@dimen/default_margin"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:text="@={model.password}"
            tools:text="000000"
            app:layout_constraintTop_toBottomOf="@id/iTextPasscode"/>

        <Button
            android:id="@+id/iBtnLogin"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@color/color_theme"
            android:background="@drawable/shape_btn"
            android:onClick="@{click::onClick}"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/iTextForgot"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iEditPasscode" />

        <Button
            android:id="@+id/iTextForgot"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/forgot_passcode"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:onClick="@{click::onClick}"
            android:textColor="@color/white"
            android:background="@drawable/stroke_white_4"
            app:layout_constraintBottom_toTopOf="@id/iTextTermsPolicy"
            app:layout_constraintTop_toBottomOf="@id/iBtnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/iTextTermsPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginBottom="20dp"
            android:textColor="#80FFFFFF"
            tools:text="Terms of Use | Privacy Policy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>